# snake-game

./: .pre-commit-config.yaml  constants.py  main.py  objects.py  pyproject.toml
.github/workflows/: pre-commit.yml  pylint.yml
